# claude_update_story

./: .env.example  .gitignore  README.md  pyproject.toml
deploy/: com.kengyit.claude-storyteller.plist  install.sh  uninstall.sh
src/claude_storyteller/: config.py  dedupe.py  github_repos.py  main.py  state_repo.py  storyteller.py  telegram_bot.py
src/claude_storyteller/sources/: __init__.py  _filter.py  anthropic_docs.py  anthropic_news.py  base.py  claude_code_releases.py  claude_probe.py
state/: explained.json
