[project]
name = "claude-storyteller"
version = "0.1.0"
description = "Daily Telegram storyteller for new Claude features, grounded in your GitHub repos."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "python-telegram-bot>=21.6",
    "PyGithub>=2.4.0",
    "feedparser>=6.0.11",
    "httpx>=0.27.2",
    "selectolax>=0.3.27",
    "APScheduler>=3.10.4",
    "tenacity>=9.0.0",
    "python-dotenv>=1.0.1",
    "GitPython>=3.1.43",
]

[project.scripts]
claude-storyteller = "claude_storyteller.main:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_storyteller"]
